ISPN-14824 Open packages required by JBoss Marshalling River
* Also clean up some packages shaded by mistake into the objectfilter module
* Added (disabled) Automatic-Module-Name entries to manifests (see ISPN-10030)